# fuzzy-system

./: .gitignore  main.py  pyproject.toml  scikit-approach.py
